--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
-@source inline("bg-{physical,special,status}");
+@source inline("bg-{physical,special,status,morn,day,nite,eve}");
 
 @theme inline {
   --color-background: var(--background);
@@ -78,6 +78,10 @@
   --color-steel-raw: 0.8 0.05 250;
   --color-water: oklch(0.65 0.18 250); /* blue */
   --color-water-raw: 0.65 0.18 250;
+
+  --color-nite: var(--color-blue-900); /* dark background */
+  --color-day: var(--color-blue-200); /* light background */
+  --color-morn: var(--color-orange-200); /* morning background */
 
   --color-error: oklch(0.577 0.245 27.325); /* red */
 
