--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @source inline("bg-{physical,special,status,morn,day,nite,eve}");
 
 @theme inline {
@@ -89,18 +91,17 @@
   --color-special: #5973a7;
   --color-status: #a9a795;
 }
-/*
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
-/*
----break--- */
+}
+/* ---break--- */
 :root {
   --radius: 0.625rem;
-  --background: #f6f8fc;
+  --background: #fff;
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
